# synacor_challenge

./: .gitignore  Cargo.toml  synacor_challenge.csproj
src/: Assembler.cs  CodeGen.cs  Program.cs  main.rs
src/compiler/: decompilation.rs  mod.rs
src/compiler/compilation/: compiler.rs  mod.rs  parser.rs
src/runtime/: data.rs  mod.rs  vm.rs
src/runtime/debugger/: header_collection.rs  mod.rs
