[package]
name = "synacor_challenge"
version = "0.1.0"
authors = ["Mårten Åsberg <marten.asberg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1"
clap = "2.33"
ctrlc = "3.1"
serde = { version = "^1", features = ["derive"] }
